# Githubclub

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  Snakefile  Snakefile_Multi  annotation_and_tsv_parsing.py  b_prepde_input.txt  data  dev-requirements.txt  do_things.py  down_reg.tsv  eggnog_starter.py  gene_count_matrix.csv  genome  gffread-0.12.7.Linux_x86_64.tar  havefun.fasta  kaas.config  parse_tsv.py  pyproject.toml  quick_script.py  ruff.toml  transcript_count_matrix.csv  up_down_merger.py  up_reg.tsv
.github/workflows/: .github_flow.yml
.snakemake/metadata/: YmFtX2ZpbGVzL1NSUjI0NjMwOTAwLmJhbQ==  YmFtX2ZpbGVzL1NSUjI0NjMwOTAxLmJhbQ==  YmFtX2ZpbGVzL1NSUjI0NjMwOTAyLmJhbQ==  YmFtX2ZpbGVzL1NSUjI0NjMwOTE3LmJhbQ==  YmFtX2ZpbGVzL1NSUjI0NjMwOTE4LmJhbQ==  YmFtX2ZpbGVzL1NSUjI0NjMwOTE5LmJhbQ==  YmFtX2ZpbGVzL1NSUjI0NjMwOTIwLmJhbQ==  (+104 more)
R_output/: DeSeq_3h.R  De_seq.R  TMV_4h_downregulated.tsv  TMV_4h_upregulated.tsv  XCV3_3h_downregulated.tsv  XCV3_3h_upregulated.tsv  Xag8ra_3h_downregulated.tsv  Xag8ra_3h_upregulated.tsv  bacteria_downregulated.tsv  bacteria_upregulated.tsv  fungus_downregulated.tsv  fungus_upregulated.tsv  p_capsici_4h_downregulated.tsv  p_capsici_4h_upregulated.tsv
adapters/: project_adapters.fa
bif_template/: main.py
counts/: gene_count_matrix.csv  transcript_count_matrix.csv
kos_and_ids/: TMV_4_for_kegg.tsv  XCV1__for_kegg.tsv  XCV3__for_kegg.tsv  Xag8r_for_kegg.tsv  p_cap_for_kegg.tsv
metadata/: GSE240943.csv  GSE240944.csv  shortened_GSE240943.csv  shortened_GSE240944.csv
notebooks/: analysis.ipynb
tests/: test_main.py
(+95 files in other folders)
