[project]
name = "bif_template"
description = "Simple python project template for BIF projects."
version = "0.0.1"
authors = [
    { name = "Bjorn Wiggers", email = "Bjornwiggers@hotmail.com" }
]
dependencies = []
[tool.setuptools]
py-modules = []

[project.optional-dependencies]
dev = ["ipykernel", "pre-commit", "pytest", "ruff"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"